Fixed an issue where the border radius of the image is not loading properly on iOS devices.

--- a/src/components/Menu/style.css
+++ b/src/components/Menu/style.css
@@ -1,3 +1,8 @@
+.gatsby-image-wrapper {
+  position: relative;
+  z-index: 0; 
+}
+
 @media screen and (max-width: 959px) {
   .menuContainer {
     max-width: 959px;
